# online-business-card

./: .gitignore  LICENSE  Makefile  README.md  business-demo.cabal  index.html  main.js  normal.json  normal2.json  package-lock.json  package.json  stack.yaml
app/: Main.hs
res/: index-dist.html  index.html
res/css/: screen.css
res/rte/: build-config.js  ckeditor.js  config.js  contents.css
res/rte/lang/: en.js
res/rte/samples/old/: index.html
res/rte/skins/minimalist/: editor.css  editor_gecko.css  editor_ie.css  editor_ie7.css  editor_ie8.css  editor_iequirks.css
src/: Lib.hs  Net.hs  Types.hs  UICombinators.hs  Utils.hs
src/Component/: Editor.hs  Login.hs  Nav.hs  Notification.hs  Site.hs  Title.hs
