name:                business-demo
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/EugeneN/business-demo#readme
license:             MIT
license-file:        LICENSE
author:              Eugene Naumenko
maintainer:          eugene.naumenko@gmail.com
copyright:           2019 Eugene Naumenko
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
                     , UICombinators
                     , Types
                     , Net
                     , Component.Title
                     , Component.Nav
                     , Component.Site
                     , Component.Login
                     , Component.Editor
                     , Component.Notification
  build-depends:       base
                     , lubeck-web
                     , lubeck-frp
                     , virtual-dom
                     , benchmark
                     , ghcjs-base
                     , stm
                     , random
                     , mtl
                     , aeson
                     , time
                     , bytestring
                     , text
                     , unordered-containers
                     , xml
                     , containers
                     , rosezipper
  default-language:    Haskell2010

executable business-demo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , business-demo
                     , lubeck-web
                     , lubeck-frp
                     , virtual-dom
                     , benchmark
                     , ghcjs-base
                     
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/EugeneN/business-demo
